--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:title" content="الكوفية الفلسطينية | Palestinian Keffiyeh" />
     <meta property="og:description" content="الكوفية الفلسطينية - رمز العزة والهوية 🇵🇸" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="" />
+    <meta name="twitter:image" content="" />
   </head>
 
   <body>
